# package

./: README.md  pyproject.toml  ruff.toml
examples/: cli.py
package/config/: config.py
package/core/: core.py
package/crawling/: scraping.py
package/embeddings/: embeddings.py
package/errors/: exceptions.py
package/queries/: query.py
package/storage/: storage.py
test/: conftest.py  test_config.py  test_core.py  test_embeddings.py  test_query.py  test_storage.py
